Logic for event handling done

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,7 @@
 /EventOrderingTest/obj
 /EventOrderingTests/obj
 /EventOrderingTests
+/EventOrdering/bin/Debug/net8.0
+/EventOrdering/obj
+/TracingService/bin/Debug/net8.0
+/TracingService/obj
