--- a/EventOrdering/EventOrdering.csproj
+++ b/EventOrdering/EventOrdering.csproj
@@ -16,6 +16,7 @@
     <ProjectReference Include="..\AccountEventHandler\AccountEventHandler.csproj" />
     <ProjectReference Include="..\AccountModel\AccountModel.csproj" />
     <ProjectReference Include="..\AccountService\AccountService.csproj" />
+    <ProjectReference Include="..\TracingService\TracingService.csproj" />
   </ItemGroup>
 
 </Project>
