--- a/ParkingService/ParkingService.csproj
+++ b/ParkingService/ParkingService.csproj
@@ -7,7 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\AccountEvents\AccountEvents.csproj" />
     <ProjectReference Include="..\AccountModel\AccountModel.csproj" />
+    <ProjectReference Include="..\TracingService\TracingService.csproj" />
   </ItemGroup>
 
 </Project>
