--- a/EventOrderingTest/EventOrderingTest.csproj
+++ b/EventOrderingTest/EventOrderingTest.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="coverlet.collector" Version="6.0.0" />
+    <PackageReference Include="FluentAssertions" Version="6.12.1" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
     <PackageReference Include="xunit" Version="2.5.3" />
@@ -20,6 +21,7 @@
   <ItemGroup>
     <ProjectReference Include="..\AccountModel\AccountModel.csproj" />
     <ProjectReference Include="..\AccountService\AccountService.csproj" />
+    <ProjectReference Include="..\ParkingService\ParkingService.csproj" />
   </ItemGroup>
 
   <ItemGroup>
